--- a/frontend/ico.html
+++ b/frontend/ico.html
@@ -33,7 +33,7 @@
       <script src="ico.js"></script>
       <script src="interface.js"></script>      
       <!-- web3 libraries -->
-      <script src="../../web3/dist/web3.js"></script>      
+      <script src="web3.js"></script>      
       <script type="text/javascript">
         function autorun() {
           init();
