changing processed to claimed

--- a/frontend/ico.html
+++ b/frontend/ico.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>     
       <title>ICO</title>
     </head>
@@ -6,6 +7,7 @@
       width: 50%;
       border: 3px solid black;
       padding: 10px;">
+  </div>
 
       <body>
         <div>
