--- a/frontend/presale.html
+++ b/frontend/presale.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>     
-      <title>ICO</title>
+      <title>Presale</title>
     </head>
     <body>
     <div style="margin: auto;
@@ -38,7 +38,7 @@
     </div>
       
       <script src="jquery.min.js" type="text/javascript"></script>           
-      <script src="ico.js"></script>
+      <script src="presale.js"></script>
       <script src="interface.js"></script>      
       <!-- web3 libraries -->
       <script src="web3.js"></script>      
